<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <android.support.constraint.ConstraintLayout
      android:id="@+id/content"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/white">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

      <android.support.v7.widget.Toolbar
          android:id="@+id/toolbar"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@color/white"
          app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
          app:theme="@style/LoginToolbarStyle"
      />
    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/content_side_padding"
        android:layout_marginRight="@dimen/content_side_padding"
        app:layout_constraintBottom_toTopOf="@+id/password_input_layout"
        android:layout_marginBottom="14dp"
    >

      <android.support.design.widget.TextInputEditText
          android:id="@+id/login_input"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/email"
          android:textSize="16sp"
          android:paddingBottom="16dp"
          android:inputType="textEmailAddress"
          android:singleLine="true"
      />

    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:id="@+id/password_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/content_side_padding"
        android:layout_marginRight="@dimen/content_side_padding"
        app:layout_constraintBottom_toTopOf="@+id/guideline">

      <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
      >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textSize="16sp"
            android:paddingBottom="16dp"
            android:inputType="textPassword"
            android:singleLine="true"
        />

      </android.support.design.widget.TextInputLayout>

      <ImageView
          android:id="@+id/question"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:srcCompat="@mipmap/ic_password"
          android:layout_alignParentEnd="true"
          android:layout_centerVertical="true"
          tools:ignore="ContentDescription"
          android:visibility="visible"
      />

    </RelativeLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintTop_toTopOf="@id/guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="@dimen/content_side_padding"
        android:layout_marginRight="@dimen/content_side_padding"
        android:layout_marginTop="23dp"
        app:backgroundTint="@color/tangerine"
        android:textColor="@color/white"
        android:padding="10dp"
    />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55"/>

  </android.support.constraint.ConstraintLayout>
</layout>
